@@ -84,6 +84,11 @@ if test "x$enable_xim" = "xyes"; then
   CFLAGS="$CFLAGS -DUSE_XIM"
 fi
 
+AC_DEFINE_UNQUOTED(GTK_MAJOR_VERSION, $GTK_MAJOR_VERSION)
+AC_DEFINE_UNQUOTED(GTK_MINOR_VERSION, $GTK_MINOR_VERSION)
+AC_DEFINE_UNQUOTED(GTK_MICRO_VERSION, $GTK_MICRO_VERSION)
+AC_DEFINE_UNQUOTED(GTK_VERSION, "$GTK_VERSION")
+
 # Find the X11 include and library directories
 AC_PATH_X
 AC_PATH_XTRA
